{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 0,
  "lineage": "b22bebc6-5136-f913-2763-2ee8a99c9faa",
  "resources": [
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:internet-gateway/igw-0ff9ed4d7849edd6e",
            "id": "igw-0ff9ed4d7849edd6e",
            "owner_id": "006549249964",
            "tags": {
              "Name": "igw-np-aft-app-090723-dev-0"
            },
            "tags_all": {
              "Name": "igw-np-aft-app-090723-dev-0",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:route-table/rtb-02ae7a7d8bb42718f",
            "id": "rtb-02ae7a7d8bb42718f",
            "owner_id": "006549249964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff9ed4d7849edd6e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-090723-dev-0-firewall"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-090723-dev-0-firewall",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:route-table/rtb-06cd88672822461e5",
            "id": "rtb-06cd88672822461e5",
            "owner_id": "006549249964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0fbf488c3e60bdc66",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-00019ee89c26cc354",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.30.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-00019ee89c26cc354",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.31.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0fbf488c3e60bdc66",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-090723-dev-0-igw"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-090723-dev-0-igw",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "0_eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:route-table/rtb-03a22878b9d8d9e55",
            "id": "rtb-03a22878b9d8d9e55",
            "owner_id": "006549249964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0fbf488c3e60bdc66",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-090723-dev-0-private-eu-west-3a"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-090723-dev-0-private-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "0_eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:route-table/rtb-0fb1b70b57b208f8a",
            "id": "rtb-0fb1b70b57b208f8a",
            "owner_id": "006549249964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-00019ee89c26cc354",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-090723-dev-0-private-eu-west-3b"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-090723-dev-0-private-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:route-table/rtb-07a3328841d9f891f",
            "id": "rtb-07a3328841d9f891f",
            "owner_id": "006549249964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0fbf488c3e60bdc66",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-090723-dev-0-public-eu-west-3a"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-090723-dev-0-public-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:route-table/rtb-024433850d3228e40",
            "id": "rtb-024433850d3228e40",
            "owner_id": "006549249964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-00019ee89c26cc354",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-090723-dev-0-public-eu-west-3b"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-090723-dev-0-public-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f53f8102e742be41",
            "route_table_id": "rtb-02ae7a7d8bb42718f",
            "subnet_id": "subnet-0940b9ff42d6246c5"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_route_table.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a2d41a8e545f4a9",
            "route_table_id": "rtb-02ae7a7d8bb42718f",
            "subnet_id": "subnet-058ee34d47eed86f7"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_route_table.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0ff9ed4d7849edd6e",
            "id": "rtbassoc-027d0ef21f24f47bd",
            "route_table_id": "rtb-06cd88672822461e5"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_route_table.igw",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "0_eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035bd0f08e3409d99",
            "route_table_id": "rtb-03a22878b9d8d9e55",
            "subnet_id": "subnet-063070b121a24d11d"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "0_eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4dbc54d5164f945",
            "route_table_id": "rtb-0fb1b70b57b208f8a",
            "subnet_id": "subnet-0cc02ba705e5928c3"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "1_eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c949637c5f3c146",
            "route_table_id": "rtb-03a22878b9d8d9e55",
            "subnet_id": "subnet-04d8dba735b68f0b1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "1_eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c39a393bd3c02b8",
            "route_table_id": "rtb-0fb1b70b57b208f8a",
            "subnet_id": "subnet-0c3846d64680f05cf"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02564f78f807e5e37",
            "route_table_id": "rtb-07a3328841d9f891f",
            "subnet_id": "subnet-0eeac4afefc75905e"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.public",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0142465a780f2ad27",
            "route_table_id": "rtb-024433850d3228e40",
            "subnet_id": "subnet-05a4201da3e30884d"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.public",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:security-group/sg-053c2194615f58d7a",
            "description": "Reserved for internal LZ use in VPC vpc-np-aft-app-090723-dev-0",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053c2194615f58d7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/19"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aws-endpoint-traffic",
            "name_prefix": "",
            "owner_id": "006549249964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-np-aft-app-090723-dev-0-aws-endpoint-traffic"
            },
            "tags_all": {
              "Name": "sg-np-aft-app-090723-dev-0-aws-endpoint-traffic",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-0940b9ff42d6246c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0940b9ff42d6246c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-firewall-eu-west-3a",
              "subnet_type": "lz-reserved"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-firewall-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "lz-reserved"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-058ee34d47eed86f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058ee34d47eed86f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-firewall-eu-west-3b",
              "subnet_type": "lz-reserved"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-firewall-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "lz-reserved"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "0_eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-063070b121a24d11d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063070b121a24d11d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-private-0-eu-west-3a",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-private-0-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "0_eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-0cc02ba705e5928c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc02ba705e5928c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-private-0-eu-west-3b",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-private-0-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "1_eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-04d8dba735b68f0b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d8dba735b68f0b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-private-1-eu-west-3a",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-private-1-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "1_eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-0c3846d64680f05cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3846d64680f05cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-private-1-eu-west-3b",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-private-1-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-0eeac4afefc75905e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeac4afefc75905e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-public-eu-west-3a",
              "subnet_type": "frontend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-public-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "frontend"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:subnet/subnet-05a4201da3e30884d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a4201da3e30884d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006549249964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-090723-dev-0-public-eu-west-3b",
              "subnet_type": "frontend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-090723-dev-0-public-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "frontend"
            },
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "standalone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:vpc/vpc-062770eb66b6272f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/19",
            "default_network_acl_id": "acl-008178023d43b8593",
            "default_route_table_id": "rtb-03996017eb52de7f1",
            "default_security_group_id": "sg-023557306e138de78",
            "dhcp_options_id": "dopt-04cddf7c34c3e1ebf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062770eb66b6272f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03996017eb52de7f1",
            "owner_id": "006549249964",
            "tags": {
              "Name": "vpc-np-aft-app-090723-dev-0"
            },
            "tags_all": {
              "Name": "vpc-np-aft-app-090723-dev-0",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "events",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:vpc-endpoint/vpce-035b5260322070c8e",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-035b5260322070c8e",
            "ip_address_type": "ipv4",
            "owner_id": "006549249964",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-023557306e138de78"
            ],
            "service_name": "com.amazonaws.eu-west-3.events",
            "state": "available",
            "tags": {
              "Name": "ep-np-aft-app-090723-dev-0-events"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-090723-dev-0-events",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:vpc-endpoint/vpce-01d1dac45e668c9cf",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01d1dac45e668c9cf",
            "ip_address_type": "ipv4",
            "owner_id": "006549249964",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-023557306e138de78"
            ],
            "service_name": "com.amazonaws.eu-west-3.logs",
            "state": "available",
            "tags": {
              "Name": "ep-np-aft-app-090723-dev-0-logs"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-090723-dev-0-logs",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:vpc-endpoint/vpce-0a17fdcd2c03f1807",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a17fdcd2c03f1807",
            "ip_address_type": "ipv4",
            "owner_id": "006549249964",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-023557306e138de78"
            ],
            "service_name": "com.amazonaws.eu-west-3.monitoring",
            "state": "available",
            "tags": {
              "Name": "ep-np-aft-app-090723-dev-0-monitoring"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-090723-dev-0-monitoring",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "fw_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:vpc-endpoint/vpce-0fbf488c3e60bdc66",
            "id": "vpce-0fbf488c3e60bdc66",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-031b2ae624249d95e"
            ],
            "owner_id": "006549249964",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.eu-west-3.vpce-svc-04ff01d417265db22",
            "state": "available",
            "subnet_ids": [
              "subnet-0940b9ff42d6246c5"
            ],
            "tags": {
              "Name": "ep-np-aft-app-090723-dev-0-fw-eu-west-3a"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-090723-dev-0-fw-eu-west-3a",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:006549249964:vpc-endpoint/vpce-00019ee89c26cc354",
            "id": "vpce-00019ee89c26cc354",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08f7902ef41bc005e"
            ],
            "owner_id": "006549249964",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.eu-west-3.vpce-svc-04ff01d417265db22",
            "state": "available",
            "subnet_ids": [
              "subnet-058ee34d47eed86f7"
            ],
            "tags": {
              "Name": "ep-np-aft-app-090723-dev-0-fw-eu-west-3b"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-090723-dev-0-fw-eu-west-3b",
              "appid": "aft-app-090723",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-062770eb66b6272f1"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    }
  ]
}